// Vitest Snapshot v1

exports[`DevTools.svelte > should open by clicking the floating button 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-eHt3GWKXLdZl"
    >
      <div
        class="floating-dock-wrapper s-g5EO2O14MaeA"
      >
        <div
          class="floating-dock s-g5EO2O14MaeA"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-g5EO2O14MaeA"
          />
           
          <div
            class="container s-g5EO2O14MaeA"
          >
            <div
              class="s-g5EO2O14MaeA"
            >
              <button
                class="snap-save-btn s-g5EO2O14MaeA"
              >
                Save snapshot
              </button>
               
              <button
                class="snap-import-btn s-g5EO2O14MaeA"
              >
                Import snapshot
              </button>
               
              <button
                aria-label="Close dev-toolkit button"
                class="close-btn s-g5EO2O14MaeA"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              class="s-g5EO2O14MaeA"
              multiple=""
              style="display: none;"
              type="file"
            />
             
            <ul
              class="tabs-menu s-G9CdWS8GObkb"
            >
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  STATE
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  HISTORY
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  PLUGINS
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  SCHEMA
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb active"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!--&lt;TabsMenu&gt;-->
             
            <section
              class="split-view s-f-Fay03D4qzv"
            >
               
              <div
                class="right-panel s-qFD0hR3IuoME"
                slot="right"
              >
                <div
                  class="no-snapshots s-qFD0hR3IuoME"
                >
                  Save snapshots by clicking "Save snapshot" button.
                </div>
              </div>
            </section>
            <!--&lt;SplitView&gt;-->
            <!--&lt;SnapshotsTab&gt;-->
          </div>
        </div>
      </div>
      <!--&lt;FloatingDock&gt;-->
    </section>
    <!--&lt;DevTools&gt;-->
  </div>
</body>
`;

exports[`DevTools.svelte > should render 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-eHt3GWKXLdZl"
    >
      <div
        class="floating-dock-wrapper s-g5EO2O14MaeA"
      >
        <div
          class="floating-dock s-g5EO2O14MaeA"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-g5EO2O14MaeA"
          />
           
          <div
            class="container s-g5EO2O14MaeA"
          >
            <div
              class="s-g5EO2O14MaeA"
            >
              <button
                class="snap-save-btn s-g5EO2O14MaeA"
              >
                Save snapshot
              </button>
               
              <button
                class="snap-import-btn s-g5EO2O14MaeA"
              >
                Import snapshot
              </button>
               
              <button
                aria-label="Close dev-toolkit button"
                class="close-btn s-g5EO2O14MaeA"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              class="s-g5EO2O14MaeA"
              multiple=""
              style="display: none;"
              type="file"
            />
             
            <ul
              class="tabs-menu s-G9CdWS8GObkb"
            >
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb active"
                >
                  STATE
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  HISTORY
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  PLUGINS
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  SCHEMA
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li
                class="s-G9CdWS8GObkb"
              >
                <button
                  class="s-G9CdWS8GObkb"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!--&lt;TabsMenu&gt;-->
             
            <section
              class="split-view s-f-Fay03D4qzv"
            >
              <div
                class="left-panel s-rhUG6P2W5qiw"
                slot="left"
              >
                <div
                  class="top-row s-rhUG6P2W5qiw"
                >
                  <h2
                    class="s-rhUG6P2W5qiw"
                  >
                    Current doc
                  </h2>
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    log
                  </button>
                  <!--&lt;Button&gt;-->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-kiBEL6mEiIqN"
                >
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[0]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      type
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="string"
                    >
                      "doc"
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                      <button
                        class="log-copy-button s-oLgcmvmGJcuH"
                      >
                        log
                      </button>
                       
                      <button
                        class="log-copy-button s-oLgcmvmGJcuH"
                      >
                        copy
                      </button>
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH collapsed"
                    data-tree-id="[1]"
                  >
                    <button
                      class="arrow-btn collapsed s-oLgcmvmGJcuH"
                    >
                      ▶
                    </button>
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH has-children"
                    >
                      content
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH has-children"
                      data-type="array"
                    >
                       [] 1 items
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                      <button
                        class="log-copy-button s-oLgcmvmGJcuH"
                      >
                        log
                      </button>
                       
                      <button
                        class="log-copy-button s-oLgcmvmGJcuH"
                      >
                        copy
                      </button>
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                </ul>
                <!--&lt;TreeView&gt;-->
              </div>
               
              <div
                class="right-panel s-rhUG6P2W5qiw"
                slot="right"
              >
                <div
                  class="top-row s-rhUG6P2W5qiw"
                >
                  <h2
                    class="s-rhUG6P2W5qiw"
                  >
                    Selection
                  </h2>
                   
                  <button
                    class="selection-btn s-NMyTiX1zi6rz"
                  >
                    <span
                      class="caret-icon s-rhUG6P2W5qiw"
                    />
                  </button>
                  <!--&lt;Button&gt;-->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-kiBEL6mEiIqN"
                >
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[0]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      jsonID
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="string"
                    >
                      "text"
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[1]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      empty
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="boolean"
                    >
                      true
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[2]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      anchor
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[3]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      from
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[4]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      head
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                  <li
                    class="row s-oLgcmvmGJcuH"
                    data-tree-id="[5]"
                  >
                     
                    <div
                      class="node-key s-oLgcmvmGJcuH p-left"
                    >
                      to
                      :
                    </div>
                     
                    <div
                      class="node-value s-oLgcmvmGJcuH"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons s-oLgcmvmGJcuH"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <!--&lt;TreeViewNode&gt;-->
                </ul>
                <!--&lt;TreeView&gt;-->
                 
                <div
                  class="s-rhUG6P2W5qiw"
                >
                  <h2
                    class="s-rhUG6P2W5qiw"
                  >
                    Active marks
                  </h2>
                   
                  <div
                    class="no-marks s-rhUG6P2W5qiw"
                  >
                    No active marks
                  </div>
                </div>
                 
                <div
                  class="s-rhUG6P2W5qiw"
                >
                  <h2
                    class="s-rhUG6P2W5qiw"
                  >
                    Document stats
                  </h2>
                   
                  <ul
                    class="tree-view svelte-tree-view s-kiBEL6mEiIqN"
                  >
                    <li
                      class="row s-oLgcmvmGJcuH"
                      data-tree-id="[0]"
                    >
                       
                      <div
                        class="node-key s-oLgcmvmGJcuH p-left"
                      >
                        nodeSize
                        :
                      </div>
                       
                      <div
                        class="node-value s-oLgcmvmGJcuH"
                        data-type="number"
                      >
                        4
                      </div>
                       
                      <div
                        class="buttons s-oLgcmvmGJcuH"
                      >
                         
                      </div>
                    </li>
                     
                    
                    <!--&lt;TreeViewNode&gt;-->
                    <li
                      class="row s-oLgcmvmGJcuH"
                      data-tree-id="[1]"
                    >
                       
                      <div
                        class="node-key s-oLgcmvmGJcuH p-left"
                      >
                        childCount
                        :
                      </div>
                       
                      <div
                        class="node-value s-oLgcmvmGJcuH"
                        data-type="number"
                      >
                        1
                      </div>
                       
                      <div
                        class="buttons s-oLgcmvmGJcuH"
                      >
                         
                      </div>
                    </li>
                     
                    
                    <!--&lt;TreeViewNode&gt;-->
                  </ul>
                  <!--&lt;TreeView&gt;-->
                </div>
              </div>
            </section>
            <!--&lt;SplitView&gt;-->
            <!--&lt;StateTab&gt;-->
          </div>
        </div>
      </div>
      <!--&lt;FloatingDock&gt;-->
    </section>
    <!--&lt;DevTools&gt;-->
  </div>
</body>
`;
